# homogint

./: .codecov.yml  .travis.yml  Demo.ipynb  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python_package.yml
examples/: Demo.ipynb  Isospectral Test.ipynb  Order.ipynb  Sphere Example.ipynb  plot_sphere.py
homogint/: __init__.py  actions.py  geodesics.py  homogint.py  movement.py  movements.py  skeletons.py  utils.py
src/homogint/: __init__.py  geodesics.py
tests/: test_homogint.py
