[project]
name = "homogint"
version = "0.1.0"
description = "Integration on homogeneous spaces"
authors = [{name = "Olivier Verdier", email="olivier.verdier@gmail.com"}]
license = {file = "LICENSE.md"}
readme = "README.md"
dependencies = [
"numpy",
"scipy",
"typing_extensions",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.setuptools]
packages = ["homogint"]