[project]
name = "homogint"
version = "0.1.1"
requires-python = ">=3.9"
description = "Integration on homogeneous spaces"
authors = [{name = "Olivier Verdier", email="olivier.verdier@gmail.com"}]
license = {file = "LICENSE.md"}
readme = "README.md"
dependencies = [
    "numpy",
    "scipy",
    "typing_extensions",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]
