[project]
name = "homogint"
version = "0.1.1"
requires-python = ">=3.9"
description = "Integration on homogeneous spaces"
authors = [{name = "Olivier Verdier", email="olivier.verdier@gmail.com"}]
license = {file = "LICENSE.md"}
readme = "README.md"
dependencies = [
    "numpy",
    "scipy",
    "typing_extensions",
]

[dependency-groups]
dev = [
    "coverage>=7.6.12",
    "flake8>=7.1.2",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]
example = [
    "jupyter>=1.1.1",
    "matplotlib>=3.9.4",
    "pickleshare>=0.7.5",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
